config-templates/alv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: alv-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: alv.SUB-DOMAIN.DOMAIN
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: application-live-view-5112
              port:
                number: 5112
