config-templates/scg-openapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: scg-openapi
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: scg-openapi.SUB_DOMAIN.DOMAIN
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: scg-operator
              port:
                number: 80
